--- a/data/logos/space-marine-cat.yml
+++ b/data/logos/space-marine-cat.yml
@@ -1,6 +1,7 @@
 slug: space-marine-cat
 title: Space Marine cat
 description: Star-blazer eye? Check. Planetary eye-patch? Check. Bad-ass attitude? Oh you know it. This logo is worthy of emblazing the vanguard Delta Force of Alpha Centari.
+isSold: true
 
 tags: [ animal, head, cat, multi-color, bad-ass ]
 otherTag: bad-ass
