--- a/data/logos/star-flower.yml
+++ b/data/logos/star-flower.yml
@@ -1,6 +1,7 @@
 slug: star-flower
 title: Star flower
 description: What do you see? A flower, a star, a human figure? Maybe it's a little of all three, set in a rainbow.
+isSold: true
 
 tags: [ abstract, star, gradient, multi-color, colorful ]
 otherTag: colorful
