--- a/data/logos/penguin.yml
+++ b/data/logos/penguin.yml
@@ -1,6 +1,7 @@
 slug: penguin
 title: Penguin
 description: A minimal penguin. Or is it a black egg with white yolk? Or is it a hound going "AAAAAAAH?"
+isSold: true
 
 tags: [ animal, body, bird, standing ]
 otherTag: standing
