--- a/data/logos/construction-gorilla.yml
+++ b/data/logos/construction-gorilla.yml
@@ -1,6 +1,7 @@
 slug: construction-gorilla
 title: Construction gorilla
 description: Kitchen need remodeling? I know a great guy. His entire body fits in a square block, and he's great with marble countertops.
+isSold: true
 
 tags: [ animal, body, thick-lines, multi-color, standing ]
 otherTag: standing
