--- a/data/logos/dog-profile.yml
+++ b/data/logos/dog-profile.yml
@@ -2,6 +2,9 @@ slug: dog-profile
 title: Dog profile
 description: This stoic pup gazes proudly into the distance over your brand. The simple shapes and clean lines make for a rock-solid emblem that looks great at any size.
 isSold: true
+inUse:
+  url: http://elixircasts.io/
+  title: ElixirCasts
 
 tags: [ animal, circle, canine, multi-color ]
 otherTag: canine
