typo, shades sold

--- a/data/logos/lady-phase-shift.yml
+++ b/data/logos/lady-phase-shift.yml
@@ -1,5 +1,5 @@
 slug: lady-phase-shift
-title: Lazy phase shift
+title: Lady phase shift
 description: A change in the phase of a waveform.
 isSold: true
 
