--- a/data/logos/shade-and-shades.yml
+++ b/data/logos/shade-and-shades.yml
@@ -1,6 +1,7 @@
 slug: shade-and-shades
 title: Shade & shades
 description: Hat, sunglasses, and all day to chill.
+isSold: true
 
 tags: [ thick-lines, head, human ]
 otherTag: thick-lines
