standing  horse, tall elephant sold

--- a/data/logos/tall-elephant.yml
+++ b/data/logos/tall-elephant.yml
@@ -1,6 +1,7 @@
 slug: tall-elephant
 title: Tall elephant
 description: This logo uses transparency and multiply blend mode to overlay shapes.
+isSold: true
 
 tags: [ animal, body, multi-color, colorful, standing ]
 otherTag: colorful
