--- a/data/logos/standing-horse.yml
+++ b/data/logos/standing-horse.yml
@@ -1,6 +1,7 @@
 slug: standing-horse
 title: Standing horse
 description: Whoa nelly! This pony is composed of interconnecting lines, but leaves gaps to keep things interesting.
+isSold: true
 
 tags: [ animal, body, one-color, thick-lines, standing ]
 otherTag: thick-lines
