🛠 use Huebee bower component

--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
   ],
   "dependencies": {
     "normalize-css": "normalize.css#^4.2.0",
-    "isotope": "^3.0.1"
+    "isotope": "^3.0.1",
+    "huebee": "^1.0.0"
   }
 }
