lazy cat in use

--- a/data/logos/lazy-flying-cat.yml
+++ b/data/logos/lazy-flying-cat.yml
@@ -2,6 +2,9 @@ slug: lazy-flying-cat
 title: Lazy flying cat
 description: If cats could fly you know they'd do it like this.
 isSold: true
+inUse:
+  url: http://www.neuestore.com/
+  title: Neue Store
 
 tags: [ cat, body, one-color, flying ]
 otherTag: flying
