--- a/data/logos/sauropod.yml
+++ b/data/logos/sauropod.yml
@@ -1,6 +1,7 @@
 slug: sauropod
 title: Sauropod
 description: Fossil records show mighty long-necked beasts would roam the plains, just chillin'.
+isSold: true
 
 tags: [ animal, body, dinosaur, standing, one-color ]
 otherTag: standing
