--- a/data/logos/maple.yml
+++ b/data/logos/maple.yml
@@ -1,6 +1,7 @@
 slug: maple
 title: Maple
 description: No ordinary leaf, this logo uses an angular gradient to display a continuum of colors.
+isSold: true
 
 tags: [ object, multi-color, gradient, colorful ]
 otherTag: colorful
