--- a/data/logos/maple.yml
+++ b/data/logos/maple.yml
@@ -2,6 +2,10 @@ slug: maple
 title: Maple
 description: No ordinary leaf, this logo uses an angular gradient to display a continuum of colors.
 isSold: true
+inUse:
+  url: http://www.actualssystems.com/
+  title: Actuals Systems
+
 
 tags: [ object, multi-color, gradient, colorful ]
 otherTag: colorful
