--- a/data/logos/happy-cat.yml
+++ b/data/logos/happy-cat.yml
@@ -1,6 +1,7 @@
 slug: happy-cat
 title: Happy cat
 description: Nothing warms the heart like a smiling feline. This logo has some versatility, working both with only facial features, or as an iconic shape.
+isSold: true
 
 tags: [ animal, head, cat, cute ]
 otherTag: cat
