🛍 witchie & pug sold

--- a/data/logos/witchie.yml
+++ b/data/logos/witchie.yml
@@ -1,6 +1,7 @@
 slug: witchie
 title: Witchie
 description: More of the Kiki's Delivery Service over the Wicked variety.
+isSold: true
 
 tags: [ human, body, flying, female, moving ]
 otherTag: moving
