--- a/data/logos/pug-icon.yml
+++ b/data/logos/pug-icon.yml
@@ -4,6 +4,10 @@ description: Can't stay mad at this trouble-maker.
 
 tags: [ animal, canine, dog, head, one-color ]
 otherTag: canine
+isSold: true
+inUse:
+  url: https://pug.sh/
+  title: Pug
 
 mainAsset:
   imgSrc: pug-icon/pug-icon.png
