--- a/package.json
+++ b/package.json
@@ -18,13 +18,12 @@
     "gulp-concat": "^2.6.1",
     "gulp-filter": "^5.0.1",
     "gulp-front-matter": "^1.3.0",
-    "gulp-hb": "^6.0.2",
     "gulp-jshint": "^2.0.4",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.6.1",
     "gulp-uglify": "^3.0.0",
     "gulp-yaml": "^1.0.1",
-    "handlebars-layouts": "^3.1.4",
+    "handlebars": "^4.0.10",
     "highlight.js": "^9.12.0",
     "js-yaml": "^3.10.0",
     "jshint": "^2.9.5",
