🎩 acorn/oak -> tri-arc

--- a/data/vol2/osprey.yml
+++ b/data/vol2/osprey.yml
@@ -2,7 +2,7 @@ slug: osprey
 title: Osprey
 description: Chipper birdie that loves fish. Wikipedia says the osprey is a raptor with a cosmopolitan range, wow.
 
-tags: [ bird, multi-color, head, animal ]
+tags: [ bird, multi-color, head, animal, cute ]
 otherTag: bird
 
 sprite: 3
