--- a/data/vol2/rabbit-runner.yml
+++ b/data/vol2/rabbit-runner.yml
@@ -2,7 +2,7 @@ slug: rabbit-runner
 title: Rabbit runner
 description: "I'm late. I'm late. But never too late to look fabulous"
 
-tags: [ animal, body, cute, multi-color ]
+tags: [ animal, body, cute, multi-color, moving ]
 otherTag: cute
 
 sprite: 3
