🎩 vol 2 logos added, 1st pass

--- a/data/vol1/construction-gorilla.yml
+++ b/data/vol1/construction-gorilla.yml
@@ -2,6 +2,9 @@ slug: construction-gorilla
 title: Construction gorilla
 description: Kitchen need remodeling? I know a great guy. His entire body fits in a square block, and he's great with marble countertops.
 isSold: true
+inUse:
+  url: https://bldy.build/
+  title: bldy
 
 tags: [ animal, body, thick-lines, multi-color, standing ]
 otherTag: standing
