--- a/data/vol1/fox-runner.yml
+++ b/data/vol1/fox-runner.yml
@@ -2,6 +2,9 @@ slug: fox-runner
 title: Fox runner
 description: Off to catch some goodies, this fox packs a whimsical smile and a big fluffy tail.
 isSold: true
+inUse:
+  url: https://rampfox.com/
+  title: Rampfox
 
 tags: [ animal, body, multi-color, cute, running, canine, moving ]
 otherTag: moving
