--- a/data/vol2/interlock.yml
+++ b/data/vol2/interlock.yml
@@ -2,7 +2,7 @@ slug: interlock
 title: interlock
 description: Three square rings interlocked within one another
 
-tags: [ thick-lines, abstract ]
+tags: [ thick-lines, abstract, one-color ]
 otherTag: abstract
 
 sprite: 3
