--- a/data/vol1/standing-horse.yml
+++ b/data/vol1/standing-horse.yml
@@ -2,6 +2,9 @@ slug: standing-horse
 title: Standing horse
 description: Whoa nelly! This pony is composed of interconnecting lines, but leaves gaps to keep things interesting.
 isSold: true
+inUse:
+  url: http://www.gildhaus.com/
+  title: Guildhaus
 
 tags: [ animal, body, one-color, thick-lines, standing ]
 otherTag: thick-lines
