🛠 vol 2 just about ready to go

--- a/data/vol2/sister-twist.yml
+++ b/data/vol2/sister-twist.yml
@@ -2,7 +2,7 @@ slug: sister-twist
 title: Sister twist
 description: Two female figures entangled in a cosmic loop.
 
-tags: [ human, multi-color, female ]
+tags: [ human, multi-color, female, rad ]
 otherTag: human
 
 sprite: 3
