🛠 only vol2 for tags

--- a/data/vol1/script-ship.yml
+++ b/data/vol1/script-ship.yml
@@ -3,8 +3,8 @@ title: Script ship
 description: Ahoy-hoy! Off the starboard bow there goes an elegant solution to this week's code sprint.
 isSold: true
 
-tags: [ object, scene, thick-lines, one-color ]
-otherTag: scene
+tags: [ object, scene, thick-lines, one-color, vehicle ]
+otherTag: vehicle
 
 mainAsset:
   imgSrc: script-ship/script-ship.png
