--- a/data/vol2/puffin.yml
+++ b/data/vol2/puffin.yml
@@ -2,7 +2,7 @@ slug: puffin
 title: Puffin
 description: Stout puffin strutting across the dale.
 
-tags: [ animal, body, multi-color, bird, cute ]
+tags: [ animal, body, multi-color, bird, cute, moving ]
 otherTag: bird
 
 sprite: 4
