--- a/data/vol2/truck-flight.yml
+++ b/data/vol2/truck-flight.yml
@@ -2,8 +2,8 @@ slug: truck-flight
 title: Truck flight
 description: The Duke boys gone done it again and jumped the creek, but this time in a high-flyin' pickup.
 
-tags: [ object, one-color ]
-otherTag: object
+tags: [ object, vehicle, one-color ]
+otherTag: vehicle
 
 mainAsset:
   imgSrc: truck-flight/truck-flight.png
