--- a/data/vol2/gorilla-step.yml
+++ b/data/vol2/gorilla-step.yml
@@ -1,6 +1,7 @@
 slug: gorilla-step
 title: Gorilla step
 description: "A journey of a thousand miles must begin with a bone-crunching floor punch. This logo has got extra think lines so it'll hold up well at tiny sizes."
+isSold: true
 
 tags: [ animal, body, thick-lines ]
 otherTag: thick-lines
