--- a/data/vol2/kick-flip-stego.yml
+++ b/data/vol2/kick-flip-stego.yml
@@ -1,6 +1,7 @@
 slug: kick-flip-stego
 title: Kick-flip stego
 description: Scientists can confirm the fossil record does not preclude the event that a stegosaurus could land a sick stunner.
+isSold: true
 
 tags: [ animal, body, dinosaur, multi-color, rad ]
 otherTag: rad
