--- a/data/vol2/interlock.yml
+++ b/data/vol2/interlock.yml
@@ -1,6 +1,7 @@
 slug: interlock
 title: interlock
 description: Three square rings interlocked within one another
+isSold: true
 
 tags: [ thick-lines, abstract, one-color ]
 otherTag: abstract
