--- a/data/vol2/puffin.yml
+++ b/data/vol2/puffin.yml
@@ -1,6 +1,7 @@
 slug: puffin
 title: Puffin
 description: Stout puffin strutting across the dale.
+isSold: true
 
 tags: [ animal, body, multi-color, bird, cute, moving ]
 otherTag: bird
