--- a/data/vol2/tri-arc.yml
+++ b/data/vol2/tri-arc.yml
@@ -1,6 +1,7 @@
 slug: tri-arc
 title: Tri-arc
 description: Three rings form a triangle with multiply blend
+isSold: true
 
 tags: [ abstract, multi-color ]
 otherTag: abstract
