sold a-star, bolt circle, diamond-snake

--- a/data/vol2/a-star.yml
+++ b/data/vol2/a-star.yml
@@ -1,6 +1,7 @@
 slug: a-star
 title: A-star
 description: Five A-shapes encircle a star.
+isSold: true
 
 tags: [ abstract, multi-color ]
 otherTag: abstract
