--- a/data/vol2/bolt-circle.yml
+++ b/data/vol2/bolt-circle.yml
@@ -1,6 +1,7 @@
 slug: bolt-circle
 title: Bolt circle
 description: Feeling electric in the morning, around a focal point.
+isSold: true
 
 tags: [ object, circle, one-color, rad ]
 otherTag: rad
