--- a/data/vol2/circle-eye.yml
+++ b/data/vol2/circle-eye.yml
@@ -1,6 +1,7 @@
 slug: circle-eye
 title: Circle eye
 description: Peer deeper into the iris enclosed in rings.
+isSold: true
 
 tags: [ abstract, multi-color ]
 otherTag: abstract
