--- a/data/vol2/glance-girl.yml
+++ b/data/vol2/glance-girl.yml
@@ -1,6 +1,7 @@
 slug: glance-girl
 title: Glance girl
 description: Who's that peaking underneath her lashes? This gal has got her eye on you.
+isSold: true
 
 tags: [ female, circle, head, multi-color, human ]
 otherTag: female
