--- a/data/vol2/red-panda.yml
+++ b/data/vol2/red-panda.yml
@@ -1,6 +1,7 @@
 slug: red-panda
 title: Red panda
 description: If racoons were this cute, USA would have serious trash monster issues.
+isSold: true
 
 tags: [ animal, body, cute, one-color ]
 otherTag: cute
