--- a/data/vol2/deer-leap.yml
+++ b/data/vol2/deer-leap.yml
@@ -1,6 +1,7 @@
 slug: deer-leap
 title: Deer leap
 description: Leaping deer composed from three bold lines, angled for action.
+isSold: true
 
 tags: [ animal, body, one-color, thick-lines, moving ]
 otherTag: moving
