--- a/data/vol2/rabbit-runner.yml
+++ b/data/vol2/rabbit-runner.yml
@@ -1,6 +1,7 @@
 slug: rabbit-runner
 title: Rabbit runner
 description: "I'm late. I'm late. But never too late to look fabulous"
+isSold: true
 
 tags: [ animal, body, cute, multi-color, moving ]
 otherTag: cute
