--- a/data/vol2/blue-jay.yml
+++ b/data/vol2/blue-jay.yml
@@ -1,6 +1,6 @@
 slug: blue-jay
 title: Blue jay
-description: Lil circular birdie chirpie to the tall trees.
+description: Lil circular birdie chirping to the tall trees.
 
 tags: [ animal, body, multi-color, bird ]
 otherTag: bird
