--- a/data/vol2/brainstorm-sheep.yml
+++ b/data/vol2/brainstorm-sheep.yml
@@ -1,6 +1,6 @@
 slug: brainstorm-sheep
 title: Brainstorm sheep
-description: Zzzzap! Like a bolt of lightning aga*ammalian brains.
+description: Zzzzap! Like a bolt of lightning to mammalian brains.
 
 tags: [ animal, body ]
 otherTag: animal
