--- a/data/vol2/acorn-oak.yml
+++ b/data/vol2/acorn-oak.yml
@@ -1,6 +1,7 @@
 slug: acorn-oak
 title: Acorn oak
 description: The purpose of an acorn is to grow to be a tall oak tree.
+isSold: true
 
 tags: [ thick-lines, object ]
 otherTag: object
