--- a/data/vol2/lone-wolf.yml
+++ b/data/vol2/lone-wolf.yml
@@ -1,6 +1,7 @@
 slug: lone-wolf
 title: Lone wolf
 description: In the distance a lone wolf stares down its purpose, piercing the night.
+isSold: true
 
 tags: [ animal, head, bad-ass, multi-color ]
 otherTag: bad-ass
