--- a/data/vol2/octopus-adorabilis.yml
+++ b/data/vol2/octopus-adorabilis.yml
@@ -1,6 +1,7 @@
 slug: octopus-adorabilis
 title: Octopus adorabilis
 description: The cute tiny octopus that stole the hearts of millions is now available in logo form.
+isSold: true
 
 tags: [ animal, body, multi-color, cute ]
 otherTag: cute
