portfolio typo, sunset hero sold

--- a/data/vol2/sunset-hero.yml
+++ b/data/vol2/sunset-hero.yml
@@ -1,6 +1,7 @@
 slug: sunset-hero
 title: Sunset hero
 description: He set his sword against the wind, stared into horizon, and wondered when he would need to weild again.
+isSold: true
 
 tags: [ human, bad-ass, body, circle ]
 otherTag: bad-ass
