--- a/data/vol2/mr-grin.yml
+++ b/data/vol2/mr-grin.yml
@@ -1,6 +1,7 @@
 slug: mr-grin
 title: Mr. Grin
 description: Nothing says Welcome more than a big toothy smile.
+isSold: true
 
 tags: [ circle, head, one-color, bad-ass ]
 otherTag: bad-ass
