tri-arc in use; https://logo.pizza

--- a/data/vol2/tri-arc.yml
+++ b/data/vol2/tri-arc.yml
@@ -2,6 +2,9 @@ slug: tri-arc
 title: Tri-arc
 description: Three rings form a triangle with multiply blend
 isSold: true
+inUse:
+  url: https://initialcommit.io/store/coding-essentials-guidebook-for-developers
+  title: Coding Essentials Guidebook
 
 tags: [ abstract, multi-color ]
 otherTag: abstract
