owl quartet sold

--- a/data/vol2/owl-quartet.yml
+++ b/data/vol2/owl-quartet.yml
@@ -1,6 +1,7 @@
 slug: owl-quartet
 title: Owl quartet
 description: Four owls aligned at the gates of the underword will judge your mortal conduct. A real hoot!
+isSold: true
 
 tags: [ bird, multi-color, body, animal ]
 otherTag: bird
