alligator key sold

--- a/data/vol2/alligator-key.yml
+++ b/data/vol2/alligator-key.yml
@@ -1,6 +1,7 @@
 slug: alligator-key
 title: Alligator key
 description: Alligator crawls out of the trenches to unlock the gates.
+isSold: true
 
 tags: [ animal, head, one-color ]
 otherTag: one-color
