🐞fix images for toucan plaid & stick runner

--- a/data/vol2/stick-runner.yml
+++ b/data/vol2/stick-runner.yml
@@ -17,3 +17,10 @@ customColors:
     title: Fill
     color: '#333'
     imgSrc: stick-runner/stick-runner.png
+
+mainSVG: |
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 840 840">
+    <title>Stick runner logo</title>
+    <!-- Designed by Metafizzy, 2017 -->
+    <path d="M547.16,349.66,667.24,469.74,820,317l-58.28-58.27-94.48,94.48L594,280a103,103,0,1,0-153.36-12.73h-65.4L255.17,147.16,102.41,299.91l58.28,58.28,94.48-94.48,86,86h20.6l-41.2,41.2H176.29L523,737.59,634.57,626l-58.28-58.27L523,621,373.15,471.17l23.72-23.73,22.72,22.72,79.29-79.3H437.07l41.21-41.2ZM523,184.83a20.61,20.61,0,1,1-20.61,20.6A20.62,20.62,0,0,1,523,184.83ZM131.55,394.4l181.9,181.89-58.28,58.28L131.55,511,78.28,564.22,20,506Z" fill="#333"/>
+  </svg>
