line dragon sold; antelope sold; seal play sold

--- a/data/vol2/antelope-family.yml
+++ b/data/vol2/antelope-family.yml
@@ -1,6 +1,7 @@
 slug: antelope-family
 title: Antelope family
 description: Two gazelles against the world.
+isSold: true
 
 tags: [ animal, multi-color, body ]
 otherTag: animal
