--- a/data/vol2/line-dragon.yml
+++ b/data/vol2/line-dragon.yml
@@ -1,6 +1,7 @@
 slug: line-dragon
 title: Line dragon
 description: Dragon with head bowed and wing expanded, visualized with thick lines overlayed with multiply blend.
+isSold: true
 
 tags: [ animal, body, multi-color, thick-lines, bad-ass, rad ]
 otherTag: rad
