--- a/data/vol2/seal-play.yml
+++ b/data/vol2/seal-play.yml
@@ -1,6 +1,7 @@
 slug: seal-play
 title: Seal play
 description: Angled lines are 2x3, which makes for a more cohesive emblem.
+isSold: true
 
 tags: [ animal, body, one-color ]
 otherTag: body
